crd-resources/traefik-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: kube-system
spec:
  gatewayClassName: traefik
  listeners:
  - name: traefik-http 
    allowedRoutes:                                                                                     
      namespaces:                                                                                      
        from: All                                                                                                                                                                   
    port: 80
    protocol: HTTP                                                                                     
  - name: traefik-https
    allowedRoutes:                                                                                     
      namespaces:                                                                                      
        from: All  
    protocol: HTTPS
    port: 443
    hostname: "*.dev.beavertech.xyz"
    tls:
      certificateRefs:
      - kind: Secret
        name: beavertech-prod-cert
      mode: Terminate
