crd-resources/argo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1                                                               
kind: HTTPRoute                                                                                        
metadata:                                                                                                                                                                                    
  labels:                                                                                              
    argocd.argoproj.io/instance: crd-resources                                                         
  name: argo-ui                                                                                    
  namespace: argocd                                                                                                                                    
spec:                                                                                                  
  hostnames:                                                                                           
  - argo.beavertech.xyz                                                                            
  parentRefs:                                                                                          
  - group: gateway.networking.k8s.io                                                                   
    kind: Gateway                                                                                      
    name: traefik-gateway                                                                               
    namespace: kube-system                                                                             
  rules:                                                                                               
  - backendRefs:                                                                                       
    - group: ""                                                                                        
      kind: Service                                                                                    
      name: argocd-server                                                                         
      port: 443                                                                                         
      weight: 1                                                                                        
    matches:                                                                                           
    - path:                                                                                            
        type: PathPrefix                                                                               
        value: /
