crd-resources/longhorn-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "longhorn.dev.beavertech.xyz"

spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - longhorn.dev.beavertech.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
      - name: longhorn-frontend
        port: 80

---
